--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.eslintrc.cjs
 package-lock.json
-postcss.config.j s
+package.json
+postcss.config.js
 tailwind.config.js
 vite.config.js
